# task_fly

./: .env.example  .gitignore  Docker-compose.yml  Dockerfile  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
src/api/: pyproject.toml
src/api/app/: main.py
